@@ -3,7 +3,6 @@ import mapboxgl from "mapbox-gl";
 import type { LngLatLike, PointLike, Popup, PopupOptions } from "mapbox-gl";
 import { inject, onMounted, onUnmounted, ref, shallowRef, watch } from "vue";
 import { mapvueSymbol } from "../symbols";
-import { useMutationObserver } from "../composables/mutation_observer";
 
 interface Props {
   visible: boolean;
@@ -18,6 +17,13 @@ const emits = defineEmits<{
   (e: "update:visible", visible: boolean): void;
 }>();
 const popupRef = ref();
+const observer = shallowRef();
+
+const mutaionCallback = () => {
+  if (props.visible && popup.value) {
+    popup.value.setHTML(popupRef.value.innerHTML);
+  }
+};
 
 const renderPopup = () => {
   if (!map) return;
@@ -93,23 +99,17 @@ const onCloseEvent = () => {
 };
 
 onMounted(() => {
-  useMutationObserver(
-    popupRef.value,
-    {
-      attributes: true,
-      childList: true,
-      subtree: true,
-    },
-    () => {
-      if (props.visible && popup.value) {
-        popup.value.setHTML(popupRef.value.innerHTML);
-      }
-    }
-  );
+  observer.value = new MutationObserver(mutaionCallback);
+  observer.value.observe(popupRef.value, {
+    attributes: true,
+    childList: true,
+    subtree: true,
+  });
   renderPopup();
 });
 
 onUnmounted(() => {
+  if (observer.value) observer.value.disconnect();
   destroyPopup();
 });
 </script>
